Changes made from the "0.6.5" release to the "0.7" release:
-----------------------------------------------------------

* Bertrand Coconnier:

- Updated GLEW source code to release 1.5.0
- glcGetFontMap() and glcGetMasterMap() now return GLC_NONE if the font/master
  does not map 'inCode'.
- Updated test7 in order not to report an error when testing fonts which defines
  a space character with no width.
- glcGenFontID() now creates an empty font in order to reserve the ID for a
  future use. The new ID can be freed by deleting it with glcDeleteFont().
- Measurement datas of glyphes are now cached in order to accelerate the
  measurement commands when GLC_GL_OBJECTS is enabled.
- Fonts which belong to the same family are now grouped in the same master.
- Added project files for Microsoft Visual C++ 2005
- Fixed bug #1856336 (glcFontFace reports GLC_RESOURCE_ERROR on Windows when
  selecting the "Arial Regular" font face).
- Removed explicit calls to glGetString(GL_VERSION) and
  glGetString(GL_EXTENSIONS) in glcContext() since GLEW already takes care of
  that.
- Fixed bug #1843710 (Code to handle missing FTC_Manager_* is broken).
- GLC_LINE mode now uses Vertex Buffer Objects (VBO) whenever the gfx card
  supports them
- Added extension GLC_QSO_buffer_object to report the use of VBOs and PBOs
  through glcGeti(GLC_BUFFER_OBJECT_COUNT_QSO) and its corresponding call to
  glcGetListi(GLC_BUFFER_OBJECT_LIST_QSO, int).
- GLC_TEXTURE mode now uses Vertex Buffer Objects (VBO) whenever the gfx card
  supports them
- Fixed bug #1834256 (part II) : The configure script now guesses the correct
  flags to use in order to cross-compile QuesoGLC for MinGW32
- Fixed bug #1834256 (part I) : An option has been added to the build scripts
  in order to disable the build of tests and examples 
- Fixed bug #1640256 (RTL scripts were wrongly supported and the fix introduced
  for release 0.6 was actually a partial fix).