@@ -1,6 +1,6 @@
 /* QuesoGLC
  * A free implementation of the OpenGL Character Renderer (GLC)
- * Copyright (c) 2002, 2004-2007, Bertrand Coconnier
+ * Copyright (c) 2002, 2004-2008, Bertrand Coconnier
  *
  *  This library is free software; you can redistribute it and/or
  *  modify it under the terms of the GNU Lesser General Public
@@ -108,6 +108,8 @@ int main(int argc, char **argv)
   glutReshapeFunc(reshape);
   glutKeyboardFunc(keyboard);
 
+  glEnable(GL_TEXTURE_2D);
+
   /* Set up and initialize GLC */
   ctx = glcGenContext();
   glcContext(ctx);
@@ -130,9 +132,9 @@ int main(int argc, char **argv)
 #endif
 
 #ifdef WITH_GL_OBJECTS
-  glcDisable(GLC_GL_OBJECTS);
   printf("\t with GL objects");
 #else
+  glcDisable(GLC_GL_OBJECTS);
   printf("\t without GL objects");
 #endif
 
